--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-lg-auto">
                     <li class="nav-item">
-                        <a href="file:///C:/Users/Lenovo/Music/Nueva%20carpeta%20(2)/2119_gymso_fitness/index.html" class="nav-link smoothScroll">Inicio</a>
+                        <a href="https://mc6704982-design.github.io/TecnoligicoBolivianoCanadienseElPaso/">Inicio</a>
                     </li>
 
                     <li class="nav-item">
@@ -469,4 +469,5 @@ conoce las normas internacionales y cómo aplicarlas para evitar riesgos.</p>
      <script src="js/custom.js"></script>
 
 </body>
+
 </html>
