--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
                     </li>
 
                     <li class="nav-item">
-                        <a href="file:///C:/Users/Lenovo/Music/Nueva%20carpeta%20(2)/2119_gymso_fitness/Nueva%20carpeta/index.html" class="nav-link smoothScroll">Detalles</a>
+                        <a href="https://mc6704982-design.github.io/prueba1/">Detalles</a>
                     </li>
 
                     <li class="nav-item">
@@ -50,7 +50,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
                     </li>
 
                     <li class="nav-item">
-                        <a href="file:///C:/Users/Lenovo/Music/Nueva%20carpeta%20(2)/2119_gymso_fitness/Nueva%20carpeta%20-%20copia/templatemo_595_3d_coverflow/index.html" class="nav-link smoothScroll">Informacion</a>
+                        <a href="https://mc6704982-design.github.io/prueba2/" class="nav-link smoothScroll">Informacion</a>
                     </li>
 
                     <li class="nav-item">
@@ -471,3 +471,4 @@ conoce las normas internacionales y cómo aplicarlas para evitar riesgos.</p>
 </body>
 
 </html>
+
