--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@ https://www.tooplate.com/view/2119-gymso-fitness
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-lg-auto">
                     <li class="nav-item">
-                        <a href="https://mc6704982-design.github.io/TecnoligicoBolivianoCanadienseElPaso/">Inicio</a>
+                        <a href="https://mc6704982-design.github.io/TecnoligicoBolivianoCanadienseElPaso/" class="nav-link smoothScroll">Inicio</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="https://mc6704982-design.github.io/prueba1/">Detalles</a>
+                        <a href="https://mc6704982-design.github.io/prueba1/"class="nav-link smoothScroll">Detalles</a>
                     </li>
 
                     <li class="nav-item">
@@ -471,4 +471,5 @@ conoce las normas internacionales y cómo aplicarlas para evitar riesgos.</p>
 </body>
 
 </html>
+
 
